<resources>
    <string name="app_name">Lab2</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="SID_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="head_portrait">上传头像</string>
    <array name="get_photo">
        <item>拍摄</item>
        <item>从相册选择</item>
    </array>
    <string name="cancel">取消</string>
    <string name="cancel_click">您选择了[取消]</string>
    <string name="take_phote_click">您选择了[拍摄]</string>
    <string name="photo_album_click">您选择了[从相册选择]</string>
    <string name="student_click">您选择了学生</string>
    <string name="teacher_click">您选择了教职工</string>
    <string name="affirm">确认</string>
    <string name="affirm_click">Snackbar 的确定按钮被点击了</string>
    <string name="error">学号或密码错误</string>
    <string name="success">登录成功</string>
    <string name="student_sign_up">学生注册功能尚未启用</string>
    <string name="teacher_sign_up">教职工注册功能尚未启用</string>
</resources>
